# gitpilot

./: .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
.github/workflows/publish/: cargo.yml
src/: cli.rs  config.rs  error.rs  main.rs
src/commands/: cleanup.rs  clone.rs  completions.rs  generate.rs  init.rs  log.rs  mod.rs  review.rs  stash.rs  status.rs  summary.rs  switch.rs  sync.rs  undo.rs
src/display/: mod.rs  tables.rs  theme.rs
src/git/: branches.rs  commits.rs  diff.rs  mod.rs  status.rs
