[package]
name = "gitpilot"
version = "0.5.0"
edition = "2021"
description = "A Git assistant for daily developer workflow"
license = "MIT"
repository = "https://github.com/harshsandhu44/gitpilot"
homepage = "https://github.com/harshsandhu44/gitpilot"

[[bin]]
name = "gitpilot"
path = "src/main.rs"

[[bin]]
name = "git-pilot"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
git2 = "0.20"
anyhow = "1.0"
thiserror = "2.0"
owo-colors = { version = "4.3", features = ["supports-colors"] }
tabled = "0.20"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
chrono = { version = "0.4" }
regex = "1"
ureq = { version = "2", features = ["json"] }
clap_mangen = "0.2"
serde_json = "1"
